# rust-practice

./: .gitignore
collection/algorithm/ada/: Cargo.toml
collection/algorithm/map/: Cargo.toml
collection/grammar/test-size/: Cargo.toml
collection/grammar/use-clone/: Cargo.toml
collection/grammar/use-fn/: Cargo.toml
collection/grammar/use-func/: Cargo.toml
collection/grammar/use-macro/: Cargo.toml
collection/grammar/use-macro2/: Cargo.toml
collection/grammar/use-mem/: Cargo.toml
collection/grammar/use-option/: Cargo.toml
collection/grammar/use-ref/: Cargo.toml
collection/grammar/use-size/: Cargo.toml
collection/grammar/use-uint/: Cargo.toml
malloc/: Cargo.toml
malloc/src/: heapsize.rs  main.rs  types.rs
my-lib/: Cargo.toml
my-lib/examples/: ex1.rs  ex2.rs
nesting/: Cargo.toml
nesting/src/: main.rs
other/use-secp/: Cargo.toml
other/use-secp/src/: main.rs
read/: Cargo.toml  tt
read/src/: main.rs
regexp/: Cargo.toml  recv_udp.sh
regexp/main/: Cargo.toml
regexp/main/src/: main.rs
regexp/pcre2-lib/: Cargo.toml  build.rs
regexp/pcre2-lib/src/: lib.rs
rust-pattern/anti-patterns/: readme.md
rust-pattern/err-delt/: Cargo.toml
rust-pattern/use-builder/: Cargo.toml
rust-pattern/use-class-type/: Cargo.toml
rust-pattern/use-compose/: Cargo.toml
rust-pattern/use-drop/: Cargo.toml
rust-pattern/use-dyn/: Cargo.toml
rust-pattern/use-ffi-compose/: Cargo.toml
rust-pattern/use-fold/: Cargo.toml
rust-pattern/use-format/: Cargo.toml
rust-pattern/use-function/: Cargo.toml
rust-pattern/use-immutable/: Cargo.toml
rust-pattern/use-interpreter/: Cargo.toml
rust-pattern/use-move/: Cargo.toml
rust-pattern/use-new/: Cargo.toml
rust-pattern/use-non-exhaustive/: Cargo.toml
rust-pattern/use-ntype/: Cargo.toml
rust-pattern/use-raii/: Cargo.toml
rust-pattern/use-str/: Cargo.toml
rust-pattern/use-strategy/: Cargo.toml
rust-pattern/use-visit/: Cargo.toml
system/get_cpu_frequency/: Cargo.toml
test-rdtsc/: Cargo.toml
test-rdtsc/src/: main.rs
tokio/example1/: Cargo.toml  tt
tokio/example2/: Cargo.toml
tokio/example3/: Cargo.toml
use-alloc/: Cargo.toml
use-alloc/src/: main.rs
use-alloc2/: Cargo.toml
use-alloc2/alloc/: Cargo.toml
use-alloc2/alloc/src/: lib.rs
use-alloc2/main/: Cargo.toml
use-alloc2/main/src/: main.rs
use-alloc3/: Cargo.toml
use-alloc3/alloc/: Cargo.toml
use-alloc3/main/: Cargo.toml
use-alloc5/: Cargo.toml
use-alloc5/src/: main.rs
use-box/: Cargo.toml
use-box/src/: main.rs
use-exp/: 5m2_dashboard  5m_dashboard  5m_log  Cargo.toml  cmp.py  default_performance_dashboard.txt  tt  ttlog
use-exp/src/: main.rs
use-exp2/: Cargo.toml
use-exp2/src/: main.rs
use-features/: Cargo.toml
use-features/src/: main.rs
use-get-size/: Cargo.toml
use-get-size/src/: main.rs
use-metrics/: Cargo.toml
use-metrics/src/: main.rs
use-metrics2/: Cargo.toml
use-metrics2/main/: Cargo.toml
use-metrics2/mylib/: Cargo.toml
use-minitrace/: Cargo.toml
use-minitrace/src/: main.rs
use-perf/: Cargo.toml  a.out  perf.c
use-perf/src/: main.rs
(+78 files in other folders)
