[package]
name = "use-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
revm-utils = { git = "https://github.com/megaeth-labs/revm", branch = "andy/debug/performance-dashboard" }
revm = { git = "https://github.com/megaeth-labs/revm", branch = "andy/debug/performance-dashboard" }
