[package]
name = "use-get-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-size = { version = "0.1.4", features = ["derive"] }
alloy-primitives = { version = "0.5", default-features = false, features = [
    "rlp",
] }
hashbrown = "0.14"
rand = "0.8.5"