[package]
name = "use-minitrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minitrace = { version = "0.5", features = ["enable"] }
# minitrace = { version = "0.5"}
futures = "0.3.28"
tracing = "0.1.0"
tracing-subscriber = "0.3"
