[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.1"
alloc = { path = "../alloc", features = ["allocator-api2"] }
# alloc = { git = "https://github.com/anonymousGiga/use-alloc2", branch = "main", features = ["allocator-api2"], optional = true}
rand = "0.8.5"